package entities.components;

import entities.GameObject;

public interface GraphicsComponent {

  void render(GameObject object);
}
