package entities.components;

import entities.GameObject;

public interface PhysicsComponent {

  void update(GameObject object);
}
