@startuml
'https://plantuml.com/class-diagram

interface InputComponent
interface PhysicsComponent
interface GraphicsComponent



class DemoInputComponent
InputComponent <|-- DemoInputComponent

class DemoInputComponent
InputComponent <|-- ObjectInputComponent

class ObjectPhysicsComponent
PhysicsComponent <|-- ObjectPhysicsComponent

class ObjectGraphicsComponent
GraphicsComponent <|-- ObjectGraphicsComponent

class GameObject
GameObject --> InputComponent
GameObject --> PhysicsComponent
GameObject --> GraphicsComponent

GameObject ..> DemoInputComponent
GameObject ..> ObjectInputComponent
GameObject ..> ObjectPhysicsComponent
GameObject ..> ObjectGraphicsComponent

GameObject <.. InputComponent
GameObject <.. PhysicsComponent
GameObject <.. GraphicsComponent

@enduml
